--- a/accounting/templates/index.html
+++ b/accounting/templates/index.html
@@ -25,7 +25,7 @@
         <fieldset>
             <legend>Enter policy information</legend>
             <label>Policy ID:</label><input type="textbox" name="id" required></input><br/>
-            <label>Date:</label><input id="date_box" type="date" name="date"></input><br/>
+            <label>Date (YYYY-MM-DD):</label><input id="date_box" type="date" name="date"></input><br/>
             <input type="submit" value="Submit"></input>
         </fieldset>
     </form>
