--- a/accounting/templates/index.html
+++ b/accounting/templates/index.html
@@ -12,22 +12,24 @@
 <![endif]-->
 </head>
 <body>
-    <p>Welcome to the insurance portal, {{ name }}!!</p>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <p>{{ message }}</p>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
-    <p>{{ text }}</p>
-    <form method="post" action="{{ url_for('policy') }}">
-        <fieldset>
-            <legend>Enter policy information</legend>
-            <label>Policy ID:</label><input type="textbox" name="id" required></input><br/>
-            <label>Date (YYYY-MM-DD):</label><input id="date_box" type="date" name="date"></input><br/>
-            <input type="submit" value="Submit"></input>
-        </fieldset>
-    </form>
+    <div class="pagewrapper">
+        <p>Welcome to the insurance portal, {{ name }}!!</p>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <p>{{ text }}</p>
+        <form method="post" action="{{ url_for('policy') }}">
+            <fieldset>
+                <legend>Enter policy information</legend>
+                <label>Policy ID:</label><input type="textbox" name="id" class="spacer"required></input><br/>
+                <label>Date (YYYY-MM-DD):</label><input id="date_box" type="date" name="date" class="spacer"></input><br/>
+                <input type="submit" value="Submit"></input>
+            </fieldset>
+        </form>
+    </div>
 </body>
 </html>
