--- a/accounting/templates/policy.html
+++ b/accounting/templates/policy.html
@@ -6,7 +6,7 @@
   <title>Insurance Portal</title>
   <meta name="description" content="View all your insurance information from one easy page!">
   <meta name="author" content="Sean Porter">
-  <!--<script src="{{ url_for('static', filename='jquery-1.11.2.min.js') }}"></script>-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
@@ -95,6 +95,12 @@
                 {% endfor %}
             </table>
         {% endif %}
+        <p>Account Maintenance</p>
+        <form method="post" action="{{ url_for('maintenance') }}">
+            <input type="textbox" name="id" value="{{ passed_data['policy_id'] }}" hidden>
+            <input type="textbox" name="date" value="{{ passed_data['date'] }}" hidden>
+            <input value="Submit" type="submit"></input>
+        </form>
     </div>
 </body>
 </html>
