BONUS: Added error checking to the inputs on the maintenance page. Updated the maintenance page with AJAX to handle individual account changes without leaving the page. Separated the javascript into separate files in /static/

--- a/accounting/static/secondary_page.css
+++ b/accounting/static/secondary_page.css
@@ -57,6 +57,10 @@ td {
     width: 100%;
 }
 
+#submit_error {
+    background-color: rgb(137, 0, 0);
+}
+
 @media all and (min-width: 700px) {
     .pagewrapper {
         width: 700px;
